--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
  <ol>
     <li><a href="../../Javascript/dom/tea shope/dom.html">dom tea shope</a></li>
     <li><a href="../../Javascript/dom/form handing/form.html">dom handling</a></li>
-    <li><a href="../../Javascript/dom/form process/form.html">dom form</a>  </li>
+    <li><a href="../../Javascript/dom/form process/form.html">dom form</a> </li>
+    <li><a href="../../Javascript/dom/templateliterals.html">template literals</a></li>
+    <li><a href="../../Javascript/dom/form validation/destructure.html">destructure</a></li>
+    <li><a href="../../Javascript/dom/form validation/formvalidation.html">form validation</a></li>
+    <li><a href="../../Javascript/dom/form validation/restoperator.html">restoperator</a></li>
+    <li><a href="../../Javascript/dom/form validation/spreadoperator.html">spreadoperator</a></li>
     
    </ol>
     
